--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -150,7 +150,7 @@ blur-kern = "3x3box";
 # Specify the backend to use: `xrender`, `glx`, or `egl`.
 #
 # Default: "xrender"
-backend = "xrender"
+backend = "glx"
 
 # Use higher precision during rendering, and apply dither when presenting the
 # rendered screen. Reduces banding artifacts, but may cause performance
@@ -188,7 +188,7 @@ detect-client-opacity = true;
 # when redirecting/unredirecting windows.
 #
 # Default: false
-# unredir-if-possible = false
+unredir-if-possible = true
 
 # Delay before unredirecting the window, in milliseconds.
 #
@@ -307,89 +307,7 @@ rules: ({
           "class_g = 'Cairo-clock' || "
           "_GTK_FRAME_EXTENTS@";
   shadow = false;
-},
-{ match = "QTILE_INTERNAL = 1"; corner-radius = 0; },
-		{
-			match = "class_g = 'st-256color'";
-			opacity = 1;
-		},
-		{
-			match = "name = 'from_top' || class_g = 'from_top'";
-			animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "up" },);
-			corner-radius = 10;
-		},
-		{
-			match = "name = 'from_top' || class_g = 'from_top'";
-			animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "up" },);
-			corner-radius = 10;
-			opacity = 1;
-		},
-		{
-			match = "class_g = 'cmus'";
-			animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "down" },);
-			corner-radius = 10;
-			opacity = 1;
-		},
-		{
-			match = "class_g = 'cmus'";
-			animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "up" },);
-			corner-radius = 10;
-			opacity = 1;
-		},
-		{
-			match = "class_g = 'Wasistlos'";
-			animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "down" },);
-			corner-radius = 10;
-			opacity = 1;
-			},
-			{
-			match = "class_g = 'Wasistlos'";
-			animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "up" },);
-			corner-radius = 10;
-			opacity = 1;
-		},
-		{
-			match = "name = 'from_bottom' || class_g = 'from_bottom'";
-			animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "up" },);
-			corner-radius = 10;
-			opacity = 1;
-		},
-		{
-			match = "name = 'from_bottom' || class_g = 'from_bottom'";
-			animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "down" },);
-			corner-radius = 10;
-			opacity = 1;
-		},
-		{
-			match = "name = 'from_right' || class_g = 'from_right'";
-			animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "up" },);
-			corner-radius = 10;
-			opacity = 1;
-		},
-		{
-			match = "name = 'from_right' || class_g = 'from_right'";
-			animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "down" },);
-			corner-radius = 10;
-			opacity = 1;
-		},
-		{
-			match = "name = 'from_left' || class_g = 'from_left'";
-			animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "up" },);
-			corner-radius = 10;
-			opacity = 1;
-		},
-		{
-			match = "name = 'from_left' || class_g = 'from_left'";
-			animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "down" },);
-			corner-radius = 10;
-			opacity = 1;
-		},
-		{
-			match = "name = 'Media viewer'";
-			match = "class_g = 'Brave-browser'";
-			opacity = 1;
-		},
-)
+})
 
 # `@include` directive can be used to include additional configuration files.
 # Relative paths are search either in the parent of this configuration file
