--- a/.config/i3/config
+++ b/.config/i3/config
@@ -21,9 +21,9 @@ set $menu dmenu_run
 workspace 1 output VGA1
 workspace 2 output VGA1
 workspace 3 output VGA1
-workspace 4 output HDMI1
-workspace 5 output HDMI1
-workspace 6 output HDMI1
+workspace 4 output HDMI-A-1
+workspace 5 output HDMI-A-1
+workspace 6 output HDMI-A-1
 
 # Sway variables
 default_border pixel
@@ -52,6 +52,7 @@ for_window [class="music"] move scratchpad
 for_window [class="monitor"] move scratchpad
 for_window [class="calculator"] move scratchpad
 for_window [class="habits"] move scratchpad
+for_window [class="ai"] move scratchpad
 for_window [class="file-manager"] move scratchpad
 for_window [class="test"] move scratchpad
 for_window [class="wasistlos"]  move scratchpad
@@ -93,29 +94,20 @@ mode "ia" {
 }
 
 mode "scratchpad" {
-##    bindsym c exec "swaypad.py -s sm -p 'top-left' -c 'foot -a calculator -e python -q' -n 'calculator'", mode "default"
-    bindsym h exec "swaypad.py -s big -p 'top' -c 'foot -a test -e nvim /home/digo/.notes/habits.norg' -n 'test'", mode "default"
-#    bindsym n exec "swaypad.py -s big -p 'bottom' -c 'foot -a notes -e nvim /home/digo/.notes/index.norg' -n 'notes'", mode "default"
-#    bindsym f exec "swaypad.py -s big -c 'foot -a file-manager -e yazi' -n 'file-manager'", mode "default"
-#    bindsym m exec "swaypad.py -s big -c 'foot -a music -e cmus' -n 'music'", mode "default"
-#    bindsym w exec "swaypad.py -s big -c 'wasistlos' -n 'wasistlos'", mode "default"
-
-#    bindsym t exec "swaypad.py -s sma -p 'top-left' -c 'foot -a todo -e taskwarrior-tui' -n 'todo'", mode "default"
     bindsym u exec --no-startup-id "i3pad sml top-center $scratchpad_term", mode "default"
     bindsym b exec --no-startup-id "i3pad lrg center-center 'st -e btop'", mode "default"
-    bindsym n exec --no-startup-id "i3pad bigl bottom-center 'st -e nvim ~/.notes/index.norg'", mode "default"
+    #bindsym n exec --no-startup-id "i3pad bigl bottom-center 'st -e nvim ~/.notes/index.norg'", mode "default"
+    bindsym n exec --no-startup-id "i3pad bigl bottom-center 'obsidian'", mode "default"
     bindsym f exec --no-startup-id "i3pad big center-center 'st -e nnn'", mode "default"
     bindsym m exec --no-startup-id "i3pad bigl center-center 'st -e cmus'", mode "default"
+    bindsym l exec --no-startup-id "i3pad bigl center-center 'st -e lowfi'", mode "default"
     bindsym w exec --no-startup-id "i3pad lrg center-center 'wasistlos'", mode "default"
     bindsym c exec --no-startup-id "i3pad sm top-left 'st -e python -q'", mode "default"
-   # bindsym t exec --no-startup-id "i3pad smv center-left 'st -e taskwarrior-tui'", mode "default"
-    bindsym t exec --no-startup-id "i3pad smv center-left 'kuro'", mode "default"
-#    bindsym l exec "swaypad.py -s sm -c 'foot -a lowfi -e lowfi' -n 'lowfi'", mode "default"
-
-#    bindsym r exec --no-startup-id "sway-scratchpad -tmt -atc -d 50%x40% -p 0,20 -- foot -T countdown -e countdown.py", mode "default"
+    bindsym t exec --no-startup-id "i3pad smv center-left 'st -e taskwarrior-tui'", mode "default"
+    bindsym i exec --no-startup-id "i3pad smv center-right 'st -e aichat'", mode "default"
     bindsym g mode "file"
     bindsym s mode "study"
-    bindsym i mode "ia"
+#    bindsym i mode "ia"
 
     bindsym Return mode "default"
     bindsym Escape mode "default"
@@ -197,7 +189,7 @@ mode "screenshot" {
     bindsym r exec "i3shot region", mode "default"
     bindsym e exec "i3shot edit", mode "default"
     bindsym s exec "i3shot", mode "default"
-    bindsym h exec "i3shot mon HDMI1", mode "default"
+    bindsym h exec "i3shot mon HDMI-A-1", mode "default"
     bindsym l exec "i3shot mon VGA1", mode "default"
 
     bindsym Return mode "default"
@@ -205,7 +197,7 @@ mode "screenshot" {
 }
 
 mode "gif_record" {
-    bindsym h exec "xregif HDMI1 8", mode "default"
+    bindsym h exec "regif HDMI-A-1 8", mode "default"
     bindsym l exec "xregif VGA1 8", mode "default"
     bindsym r exec "xregif region 8", mode "default"
 
@@ -300,8 +292,8 @@ bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
-bindsym $mod+n focus output right; exec "upmon-polybar"
-bindsym $mod+p focus output left; exec "upmon-polybar"
+bindsym $mod+n focus output right
+bindsym $mod+p focus output left
 bindsym $mod+Shift+$left move left
 bindsym $mod+Shift+$down move down
 bindsym $mod+Shift+$up move up
