--- a/.config/MangoHud/MangoHud.conf
+++ b/.config/MangoHud/MangoHud.conf
@@ -6,6 +6,7 @@ background_alpha=0.1
 background_color=000000
 
 horizontal
+horizontal_stretch=false
 hud_no_margin
 font_size=20
 text_color=FFFFFF
