--- a/.config/MangoHud/MangoHud.conf
+++ b/.config/MangoHud/MangoHud.conf
@@ -46,6 +46,8 @@ vram
 vram_color=AD64C1
 vram_color=AD64C1
 
+engine_short_names
+
 # Binds
 toggle_fps_limit=Shift_L+F1
 toggle_logging=Shift_L+F2
