changed the binds

--- a/.config/MangoHud/MangoHud.conf
+++ b/.config/MangoHud/MangoHud.conf
@@ -14,8 +14,6 @@ position=top-left
 pci_dev=0:01:00.0
 
 fps
-fps_limit_method=late
-histogram
 fps_limit=0,60,30
 fps_color_change
 fps_color=B22222,FDFD09,39F900
@@ -49,9 +47,8 @@ vram_color=AD64C1
 engine_short_names
 
 # Binds
-toggle_fps_limit=Shift_L+F1
-toggle_logging=Shift_L+F2
-toggle_hud=Shift_R+F12
+toggle_fps_limit=Shift_R+F
+toggle_hud=Shift_R+T
 #joffset=2
 
 output_folder=/home/digo
