potential fix for flicking on Steam and some windows

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -55,13 +55,13 @@ shadow-offset-y = -7;
 fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
-fade-in-step = 0.03;
+fade-in-step = 1;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
-fade-out-step = 0.03;
+fade-out-step = 1;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-# fade-delta = 10
+fade-delta = 50
 
 # Do not fade on window open/close.
 # no-fading-openclose = false
@@ -214,7 +214,7 @@ detect-transient = true;
 # every time. Should improve performance.
 #
 # Default: false
-use-damage = true;
+use-damage = false;
 
 # Use X Sync fence to wait for the completion of rendering of other windows,
 # before using their content to render the current screen.
