--- a/.config/waybar/custom_widgets/config
+++ b/.config/waybar/custom_widgets/config
@@ -1,14 +1,14 @@
 #!/usr/bin/env bash
 
 MAIN_FONT="Caveat"
-TITLE_FONT="Macondo"
-CONTENT_FONT="Macondo"
+TITLE_FONT="Pacifico"
+CONTENT_FONT="VictorMono Nerd Font Mono"
 TITLE_BOLD="800"
 CONTENT_BOLD="800"
 FONT_COLOR="#4c566a"
 
 function get_pango() {
-  local title_pango="<span foreground='$FONT_COLOR' font_family='$TITLE_FONT'>$1 </span>"
+  local title_pango="<span foreground='$FONT_COLOR' size='x-small' font_family='$TITLE_FONT'>$1 </span>"
   local content_pango="<span font_family='$CONTENT_FONT'>$2</span>"
 
   title_pango=${title_pango//\"/\\\"}
