--- a/.config/sway/rules.conf
+++ b/.config/sway/rules.conf
@@ -21,6 +21,7 @@ for_window [class="^steam_app_218640$"] move to workspace 6
 for_window [app_id="^net.lutris.Lutris$"] move to workspace 5
 for_window [class="^steam$"] move to workspace 5
 for_window [class="^heroic$"] move to workspace 5
+for_window [app_id="^heroic$"] move to workspace 5
 for_window [app_id="^mpv$"] move to workspace 6
 for_window [app_id="^anki$"] move to workspace 3
 for_window [app_id="^portal2_linux$"] move to workspace 6
@@ -29,4 +30,5 @@ for_window [app_id="^mb_warband_linux$"] move to workspace 6
 for_window [app_id="^org.telegram.desktop$"] move to workspace 3
 for_window [class="^steam_app_49520$"] move to workspace 6
 for_window [class="^steam_app_201790$"] move to workspace 6
+for_window [class="^steam_app_2221490$"] move to workspace 6
 for_window [class="^mb_warband_wse2.exe$"] move to workspace 6
