--- a/.config/MangoHud/MangoHud.conf
+++ b/.config/MangoHud/MangoHud.conf
@@ -1,59 +1,58 @@
-legacy_layout=false
+legacy_layout=false # Need for being able to arrange the position of each component.
 
-background_alpha=0.1
+# Colors
+background_color=1E2326
+cpu_color=a3be8c
+engine_color=a3be8c
+gpu_color=a3be8c
+horizontal_separator_color=4c566a
+ram_color=a3be8c
+text_color=eceff4
+vram_color=a3be8c
+cpu_load_color=eceff4,d08770,bf616a
+fps_color=eceff4,d08770,bf616a
+gpu_load_color=eceff4,d08770,bf616a
+
+# Binds
+toggle_fps_limit=Shift_R+F
+toggle_hud=Shift_R+T
+
+# Style
 round_corners=0
 background_alpha=0.1
-background_color=000000
-
 horizontal
 horizontal_stretch=false
 hud_no_margin
 font_size=20
-text_color=FFFFFF
 position=top-left
 pci_dev=0:01:00.0
 
 fps
 fps_limit=0,60,30
 fps_color_change
-fps_color=B22222,FDFD09,39F900
-fps_value=15,30
+fps_value=30,60
 
 gpu_text=GPU
 gpu_stats
-gpu_load_change
-gpu_load_value=50,90
-gpu_load_color=FFFFFF,FFAA7F,CC0000
 gpu_core_clock
 gpu_mem_clock
 gpu_temp
-gpu_color=2E9762
+gpu_load_change
+gpu_load_value=50,80
 
 cpu_text=CPU
 cpu_stats
-cpu_load_change
-cpu_load_value=50,90
-cpu_load_color=FFFFFF,FFAA7F,CC0000
 cpu_mhz
 cpu_temp
-cpu_color=2E97CB
+cpu_load_change
+cpu_load_value=50,80
 
 ram
-ram_color=C26693
 vram
-vram_color=AD64C1
-vram_color=AD64C1
 
 engine_short_names
 
-# Binds
-toggle_fps_limit=Shift_R+F
-toggle_hud=Shift_R+T
-#joffset=2
+time
+time_format=%R
 
-output_folder=/home/digo
-log_duration=30
-autostart_log=0
-log_interval=100
 
-blacklist=pamac-manager,lact,ghb,bitwig-studio,ptyxis,yumex
