--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -8,7 +8,7 @@
 # title=foot
 # locked-title=no
 
-font=0xProto Nerd Font Mono:size=13
+font=Martian Mono Nerd Font:size=12
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -233,9 +233,6 @@ hide-when-typing=yes
 #
 # this specific foot theme is based on nord-alacritty:
 # https://github.com/arcticicestudio/nord-alacritty/blob/develop/src/nord.yml
-
-[cursor]
-color = 2e3440 d8dee9
 
 [colors]
 foreground = d8dee9
