--- a/.config/swaylock/config
+++ b/.config/swaylock/config
@@ -1,3 +1,2 @@
-image=VGA-1:/home/digo/.wallpapers/hori.png
-image=HDMI-A-1:/home/digo/.wallpapers/vert.png
+image=HDMI-A-2:/home/digo/.wallpapers/ign_unsplash32.png
 hide-keyboard-layout
