--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -30,7 +30,7 @@ width = 100%
 height = 20pt
 radius = 0
 
-monitor = HDMI1
+monitor = HDMI-A-1
 ; dpi = 96
 
 background = ${colors.background}
@@ -52,7 +52,7 @@ separator-foreground = ${colors.disabled}
 font-0 = "Leckerli One:pixelsize=12;0"
 
 modules-left = i3
-modules-right = main_mon fs-hdd fs-home variant date systray
+modules-right = main_mon fs-hdd fs-home variant date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -110,8 +110,8 @@ enable-ipc = true
 [module/systray]
 type = internal/tray
 
-format-margin = 8pt
-tray-spacing = 16pt
+format-margin = 0pt
+tray-spacing = 4pt
 
 [fs-base]
 type = internal/fs
@@ -144,28 +144,16 @@ label-volume = %percentage%%
 label-muted = muted
 label-muted-foreground = ${colors.disabled}
 
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
-
-label-layout = %layout%
-label-layout-foreground = ${colors.primary}
-
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.secondary}
-
 [module/memory]
 type = internal/memory
-interval = 2
+interval = 10
 format-prefix = "%{F#707880}RAM %{F-}"
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
 
 [module/cpu]
 type = internal/cpu
-interval = 2
+interval = 3
 format-prefix = "%{F#707880}CPU %{F-}"
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
