changed colors to everforest colosrcheme

--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -235,8 +235,8 @@ hide-when-typing=yes
 # https://github.com/arcticicestudio/nord-alacritty/blob/develop/src/nord.yml
 
 [colors]
-foreground = d8dee9
-background = 2e3440
+foreground = D3C6AA
+background = 272E33
 
 # selection-foreground = d8dee9
 # selection-background = 4c566a
@@ -259,7 +259,7 @@ bright5 = b48ead
 bright6 = 8fbcbb
 bright7 = eceff4
 
-dim0 = 373e4d
+dim0 = 1E2326
 dim1 = 94545d
 dim2 = 809575
 dim3 = b29e75
