--- a/.config/sway/config
+++ b/.config/sway/config
@@ -250,6 +250,18 @@ bindsym $mod+r mode "resize"; exec mode "default"
 bindsym $mod+v mode "volume"; exec mode "default"
 bindsym $mod+b mode "bar"; exec mode "default"
 
+# rules
+#for_window [class="^com.github.th_ch.youtube_music$"] move to workspace 5
+for_window [title="Open file"] resize set width 900, resize set height 500
+for_window [app_id="^xdg-desktop-portal-gtk$"] resize set width 900, resize set height 500
+for_window [app_id="yad"] floating enable, resize set 100, move position 30 30
+for_window [app_id="imv"] floating enable, resize set 700
+for_window [app_id="com.example.App"] floating enable, resize set 700
+for_window [class="^Firefox$"] inhibit_idle fullscreen
+for_window [app_id="^firefox$"] inhibit_idle fullscreen
+for_window [app_id="^brave-browser$"] move to workspace 4
+for_window [app_id="it.catboy.ripdrag"] move position 850 10
+
 # Read `man 5 sway-bar` for more information about this section.
 bar swaybar_command waybar
 
